--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,8 @@
-boto==2.9.6
+Flask==0.10.1
+Frozen-Flask==0.11
+Jinja2==2.7.1
+MarkupSafe==0.18
+Werkzeug==0.9.3
+itsdangerous==0.23
+requests==1.2.3
 wsgiref==0.1.2
